--- a/main.html
+++ b/main.html
@@ -4,5 +4,9 @@
     <script type="text/javascript" src="./script.js">
 </script>
   </body>
+	<input type="text" id="name" name="name" >
+	<input type="number" id="year" name="year" >
+	<input type="submit" id="button" onclick="updateFun()">
 
+	<h3 id="url">https://localhost:8080/</h3>
 </html>
