--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
   </body>
 	<input type="text" id="name" name="name" >
 	<input type="number" id="year" name="year" >
-	<input type="submit" id="button" onclick="updateFun()">
+	<button type="submit" id="button" onclick="updateFun()">
 
 	<h3 id="url">https://localhost:8080/</h3>
 </html>
